fixed Header-issues w. z-index w. MONICA

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -16,7 +16,8 @@
       margin: 1rem 2.5rem;
       top: 0;
       left: 0;
-      background-color: #86C86B;
+      background-color: none;
+      z-index: 3;
         svg {
           width: 1.5rem;
         }
@@ -45,6 +46,7 @@
       gap: 2rem;
       align-items: center;
       margin: 1rem;
+      z-index: 2;
   
       li {
         height: 2vh;
@@ -128,6 +130,10 @@
   flex-direction: column;
   align-items: flex-end;
   gap: 5px;
+
+  p {
+    pointer-events: none;
+  }
 }
 .cart-container{
   position: relative;
